@@ -5,6 +5,8 @@ Changelog
 1.9.1 (unreleased)
 ------------------
 
+- Add option to hide emtpy news listing block. [mbaechtold]
+
 - Use "ftw.referencewidget" as the widget for selecting the paths used
   to filter the news items. [mbaechtold]
 
